<resources>
    <plurals name="search_results">
        <item quantity="one">%1$d result</item>
        <item quantity="other">%1$d results</item>
    </plurals>
    <string name="frog_development" translatable="false">FROG DEVELOPMENT</string>
    <string name="app_name">Nihon Go! Dictionary</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search a word</string>
    <string name="no_results">No results</string>
    <string name="downloads_title">Downloads</string>
    <string name="downloads_language_title">Language</string>
    <string name="downloads_entries_hint">Select a language</string>
    <string name="downloads_entries_title">Download dictionary</string>
    <string name="downloads_entries_info" translatable="false">Copyright JMdict/EDICT &amp; EDRDG</string>
    <string name="downloads_entries_summary" translatable="false">https://www.edrdg.org/jmdict/edict_doc.html</string>
    <string name="downloads_entries">Download dictionary</string>
    <string name="downloads_examples_title">Download examples</string>
    <string name="downloads_examples_info" translatable="false">CC-BY 2.0 Tatoeba</string>
    <string name="downloads_examples_summary" translatable="false">https://tatoeba.org</string>
    <string name="downloads_examples">Download examples</string>
    <string name="downloads_big_file_warning">Beware, the file is big, please use WiFi. Continue ?</string>
    <string name="exit_message">Quit application ?</string>
    <string name="exit_yes">Quit</string>
    <string name="exit_no">Stay</string>
    <string name="tips"><![CDATA[
        <p><b>Search tips :</b><ul>
        <li>default : exactly match words (e.g. : hot water)</li>
        <li>start with: suffix with * (e.g. : wa*)</li>
        <li>NOT : prefix by ! (e.g. : hot ! water)</li>
        <li>OR : prefix by ? (e.g. : hot ? water)</li>
        <li>combine all (ex : hot ? wa*)</li>
        </ul></p>
    ]]></string>
    <string name="favorites_title">Favorites</string>
    <string name="no_favorites">No favorites</string>
    <string name="settings_lang_eng_value" translatable="false">eng</string>
    <string name="settings_lang_eng_label" translatable="false">English</string>
    <string name="settings_lang_fra_value" translatable="false">fra</string>
    <string name="settings_lang_fra_label" translatable="false">Français</string>
    <string name="settings_dictionary_title" translatable="false">Dictionary</string>
    <string name="settings_languages_title" translatable="false">Languages</string>
    <string name="settings_about_application" translatable="false">Application</string>
    <string name="settings_about_version_title" translatable="false">Version</string>
    <string name="misc_title" translatable="false">Miscellaneous sense info</string>
    <string name="misc_abbr" translatable="false">abbreviation</string>
    <string name="misc_aphorism" translatable="false">aphorism (pithy saying)</string>
    <string name="misc_arch" translatable="false">archaism</string>
    <string name="misc_chn" translatable="false">children\'s language</string>
    <string name="misc_col" translatable="false">colloquialism</string>
    <string name="misc_company" translatable="false">company name</string>
    <string name="misc_dated" translatable="false">dated term</string>
    <string name="misc_derog" translatable="false">derogatory</string>
    <string name="misc_eK" translatable="false">exclusively kanji</string>
    <string name="misc_fam" translatable="false">familiar language</string>
    <string name="misc_fem" translatable="false">female term, language, or name</string>
    <string name="misc_given" translatable="false">given name or forename, gender not specified</string>
    <string name="misc_hist" translatable="false">historical term</string>
    <string name="misc_hon" translatable="false">honorific or respectful (sonkeigo) language</string>
    <string name="misc_hum" translatable="false">humble (kenjougo) language</string>
    <string name="misc_id" translatable="false">idiomatic expression</string>
    <string name="misc_joc" translatable="false">jocular, humorous term</string>
    <string name="misc_litf" translatable="false">literary or formal term</string>
    <string name="misc_m_sl" translatable="false">manga slang</string>
    <string name="misc_male" translatable="false">male term, language, or name</string>
    <string name="misc_net_sl" translatable="false">Internet slang</string>
    <string name="misc_obs" translatable="false">obsolete term</string>
    <string name="misc_obsc" translatable="false">obscure term</string>
    <string name="misc_on_mim" translatable="false">onomatopoeic or mimetic word</string>
    <string name="misc_organization" translatable="false">organization name</string>
    <string name="misc_person" translatable="false">full name of a particular person</string>
    <string name="misc_place" translatable="false">place name</string>
    <string name="misc_poet" translatable="false">poetical term</string>
    <string name="misc_pol" translatable="false">polite (teineigo) language</string>
    <string name="misc_product" translatable="false">product name</string>
    <string name="misc_proverb" translatable="false">proverb</string>
    <string name="misc_quote" translatable="false">quotation</string>
    <string name="misc_rare" translatable="false">rare</string>
    <string name="misc_sens" translatable="false">sensitive</string>
    <string name="misc_sl" translatable="false">slang</string>
    <string name="misc_station" translatable="false">railway station</string>
    <string name="misc_surname" translatable="false">family or surname</string>
    <string name="misc_uk" translatable="false">word usually written using kana alone</string>
    <string name="misc_unclass" translatable="false">unclassified name</string>
    <string name="misc_vulg" translatable="false">vulgar expression or word</string>
    <string name="misc_work" translatable="false">work of art, literature, music, etc. name</string>
    <string name="misc_X" translatable="false">rudeor X-rated term (not displayed in educational software)</string>
    <string name="misc_yoji" translatable="false">yojijukugo</string>
    <string name="pos_title" translatable="false">Part-of-speech info</string>
    <string name="pos_adj_f" translatable="false">noun or verb acting prenominally</string>
    <string name="pos_adj_i" translatable="false">adjective (keiyoushi)</string>
    <string name="pos_adj_ix" translatable="false">yoi/ii i-adjective</string>
    <string name="pos_adj_kari" translatable="false">kari adjective (archaic)</string>
    <string name="pos_adj_ku" translatable="false">ku adjective (archaic)</string>
    <string name="pos_adj_na" translatable="false">adjectival nouns or quasi-adjectives (keiyodoshi)</string>
    <string name="pos_adj_nari" translatable="false">archaic/formal form of na-adjective</string>
    <string name="pos_adj_no" translatable="false">nouns which may take the genitive case particle \'no\'</string>
    <string name="pos_adj_pn" translatable="false">pre-noun adjectival (rentaishi)</string>
    <string name="pos_adj_shiku" translatable="false">shiku adjective (archaic)</string>
    <string name="pos_adj_t" translatable="false">\'taru\' adjective</string>
    <string name="pos_adv" translatable="false">adverb (fukushi)</string>
    <string name="pos_adv_to" translatable="false">adverb taking the \'to\' particle</string>
    <string name="pos_aux" translatable="false">auxiliary</string>
    <string name="pos_aux_adj" translatable="false">auxiliary adjective</string>
    <string name="pos_aux_v" translatable="false">auxiliary verb</string>
    <string name="pos_conj" translatable="false">conjunction</string>
    <string name="pos_cop" translatable="false">copula</string>
    <string name="pos_ctr" translatable="false">counter</string>
    <string name="pos_exp" translatable="false">Expressions (phrases, clauses, etc.)</string>
    <string name="pos_int" translatable="false">interjection (kandoushi)</string>
    <string name="pos_n" translatable="false">noun (common) (futsuumeishi)</string>
    <string name="pos_n_adv" translatable="false">adverbial noun (fukushitekimeishi)</string>
    <string name="pos_n_pr" translatable="false">proper noun</string>
    <string name="pos_n_pref" translatable="false">noun, used as a prefix</string>
    <string name="pos_n_suf" translatable="false">noun, used as a suffix</string>
    <string name="pos_n_t" translatable="false">noun (temporal) (jisoumeishi)</string>
    <string name="pos_num" translatable="false">numeric</string>
    <string name="pos_pn" translatable="false">pronoun</string>
    <string name="pos_pref" translatable="false">prefix</string>
    <string name="pos_prt" translatable="false">particle</string>
    <string name="pos_suf" translatable="false">suffix</string>
    <string name="pos_unc" translatable="false">unclassified</string>
    <string name="pos_v_unspec" translatable="false">verb unspecified</string>
    <string name="pos_v1" translatable="false">Ichidan verb</string>
    <string name="pos_v1_s" translatable="false">Ichidan verb - kureru special class</string>
    <string name="pos_v2a_s" translatable="false">Nidan verb with \'u\' ending (archaic)</string>
    <string name="pos_v2b_k" translatable="false">Nidan verb (upper class) with bu ending (archaic)</string>
    <string name="pos_v2b_s" translatable="false">Nidan verb (lower class) with bu ending (archaic)</string>
    <string name="pos_v2d_k" translatable="false">Nidan verb (upper class) with dzu ending (archaic)</string>
    <string name="pos_v2d_s" translatable="false">Nidan verb (lower class) with dzu ending (archaic)</string>
    <string name="pos_v2g_k" translatable="false">Nidan verb (upper class) with gu ending (archaic)</string>
    <string name="pos_v2g_s" translatable="false">Nidan verb (lower class) with gu ending (archaic)</string>
    <string name="pos_v2h_k" translatable="false">Nidan verb (upper class) with hu/fu ending (archaic)</string>
    <string name="pos_v2h_s" translatable="false">Nidan verb (lower class) with hu/fu ending (archaic)</string>
    <string name="pos_v2k_k" translatable="false">Nidan verb (upper class) with ku ending (archaic)</string>
    <string name="pos_v2k_s" translatable="false">Nidan verb (lower class) with ku ending (archaic)</string>
    <string name="pos_v2m_k" translatable="false">Nidan verb (upper class) with mu ending (archaic)</string>
    <string name="pos_v2m_s" translatable="false">Nidan verb (lower class) with mu ending (archaic)</string>
    <string name="pos_v2n_s" translatable="false">Nidan verb (lower class) with nu ending (archaic)</string>
    <string name="pos_v2r_k" translatable="false">Nidan verb (upper class) with ru ending (archaic)</string>
    <string name="pos_v2r_s" translatable="false">Nidan verb (lower class) with ru ending (archaic)</string>
    <string name="pos_v2s_s" translatable="false">Nidan verb (lower class) with su ending (archaic)</string>
    <string name="pos_v2t_k" translatable="false">Nidan verb (upper class) with tsu ending (archaic)</string>
    <string name="pos_v2t_s" translatable="false">Nidan verb (lower class) with tsu ending (archaic)</string>
    <string name="pos_v2w_s" translatable="false">Nidan verb (lower class) with u ending and we conjugation (archaic)</string>
    <string name="pos_v2y_k" translatable="false">Nidan verb (upper class) with yu ending (archaic)</string>
    <string name="pos_v2y_s" translatable="false">Nidan verb (lower class) with yu ending (archaic)</string>
    <string name="dial_title" translatable="false">Dialect</string>
    <string name="field_title" translatable="false">Usage domain</string>
    <string name="info_title" translatable="false">Reading info</string>
    <string name="sentences">Examples</string>
</resources>