<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/kanji"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@{viewModel.entryDetails().kanji}"
            android:textSize="50sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/kana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/kanji"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@{viewModel.entryDetails().kana}"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/kanji"
            app:layout_constraintTop_toBottomOf="@+id/kanji" />

        <TextView
            android:id="@+id/reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@{viewModel.entryDetails().reading}"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/kana"
            app:layout_constraintTop_toBottomOf="@+id/kana" />

        <TextView
            android:id="@+id/misc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/misc_title"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/reading"
            app:layout_constraintTop_toBottomOf="@+id/reading" />

        <TextView
            android:id="@+id/misc_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/misc_title"
            app:layout_constraintTop_toBottomOf="@+id/misc_title" />

        <TextView
            android:id="@+id/pos_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/pos_title"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/misc_value"
            app:layout_constraintTop_toBottomOf="@+id/misc_value" />

        <TextView
            android:id="@+id/pos_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/pos_title"
            app:layout_constraintTop_toBottomOf="@+id/pos_title" />

        <TextView
            android:id="@+id/dial_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/dial_title"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/pos_value"
            app:layout_constraintTop_toBottomOf="@+id/pos_value" />

        <TextView
            android:id="@+id/dial_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/dial_title"
            app:layout_constraintTop_toBottomOf="@+id/dial_title" />

        <TextView
            android:id="@+id/field_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/field_title"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/dial_value"
            app:layout_constraintTop_toBottomOf="@+id/dial_value" />

        <TextView
            android:id="@+id/field_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/field_title"
            app:layout_constraintTop_toBottomOf="@+id/field_title" />

        <TextView
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/info_title"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/field_value"
            app:layout_constraintTop_toBottomOf="@+id/field_value" />

        <TextView
            android:id="@+id/info_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/info_title"
            app:layout_constraintTop_toBottomOf="@+id/info_title" />

        <TextView
            android:id="@+id/vocabulary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@{viewModel.entryDetails().gloss}"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/info_value"
            app:layout_constraintTop_toBottomOf="@+id/info_value" />

        <TextView
            android:id="@+id/sentences_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="16dp"
            android:text="@string/sentences"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/vocabulary"
            app:layout_constraintTop_toBottomOf="@+id/vocabulary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sentences"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sentences_title"
            tools:listitem="@layout/sentence_row" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/searching_progress"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:SpinKit_Color="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vocabulary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="com.frogdevelopment.nihongo.dico.data.details.DetailsViewModel" />
    </data>
</layout>